# post--human-learning

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  metadata.yml  post.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build.yml
in_defense_of_human_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
