[project]
name = "in-defense-of-human-learning"
version = "0.0.0"
requires-python = "~=3.12"
dependencies = [
    "jupyter",
    "ipykernel",
    "nbconvert",
    "notebook",
    "pre-commit",
    # Add in any dependencies you need for the blog post here, for example:
    # "matplotlib",
    # "numpy",
    # "scipy",
]

[tool.uv.workspace]
